--- a/Core/templates/Core/homepage.html
+++ b/Core/templates/Core/homepage.html
@@ -51,7 +51,7 @@
     <div class="row mt-5 pt-5 p-0">
         <div class="col-12 col-md-12 col-lg-3">
             
-            <div class="card border  ">
+            <div class="card border shadow-sm ">
                 <div class="card-header border-0" style="font-size: 13px; color: #546E7A;">
                     <i class="fa fa-newspaper-o" style="color:#E57851 ;"></i> Blogs
                 </div>
@@ -157,7 +157,7 @@
                   </div>
             </div>
 
-            <div class="card mt-3 ">
+            <div class="card mt-3 shadow-sm">
                 <div class="card-header border-0">
                     <div style="font-size: 13px;" class="text-muted">
                        <i class="fa fa-user-plus" style="color:#E57851"></i> I am Following 16
@@ -185,7 +185,7 @@
                   </div>
             </div>
             {% if activity %}
-            <div class="card mt-3 ">
+            <div class="card mt-3 shadow-sm">
                 <div class="card-header border-0">
                     <div style="font-size: 13px;" class="text-muted">
                        <i class="fa fa-tasks" style="color:#E57851"></i> My Recent Activities
@@ -224,7 +224,7 @@
             {% endif %}
         </div>
         <div class="col-12 col-md-12 col-lg-6 mb-3">
-            <div class="card border  ">
+            <div class="card border shadow-sm ">
                 <div class="card-header d-flex justify-content-between align-items-center border-0">
                    <div class="d-flex justify-content-start align-items-center">
                     <div>
@@ -272,7 +272,7 @@
             <div id="myItems">
             {% for i in home %}
                     {% if i.category == 'Post' %}
-                    <div class="card carding mt-3 ">
+                    <div class="card carding mt-3 shadow-sm">
                         <div class="card-body content">
                             <div class="d-flex justify-content-between">
                                 <div class="d-flex justify-content-start mb-3 align-items-center">
@@ -486,7 +486,7 @@
 
 
                     {% elif i.category == 'Video' %}
-                    <div class="card carding mt-3 ">
+                    <div class="card carding mt-3 shadow-sm">
                         <div class="card-body content">
                             <div class="d-flex justify-content-between">
                                 <div class="d-flex justify-content-start mb-3 align-items-center">
@@ -604,7 +604,7 @@
                         </div>
                     </div>
                     {% elif i.category == 'Photo' %}
-                    <div class="card carding  mt-3">
+                    <div class="card carding shadow-sm mt-3">
                         <div class="card-body content">
                             <div class="d-flex justify-content-between">
                                 <div class="d-flex justify-content-start mb-3 align-items-center">
@@ -742,7 +742,7 @@
                         </div>
                     </div>
                     {% elif i.category == 'Blog' %}
-                        <div class="card carding border  mt-3 ">
+                        <div class="card carding border shadow-sm mt-3 ">
                             <div class="card-body content">
                             <div class="d-flex justify-content-between">
                                 <div class="d-flex justify-content-start mb-3 align-items-center">
@@ -835,7 +835,7 @@
                 </div>
         </div>
         <div class="col-12 col-md-12 col-lg-3">
-            <div class="card mb-3 ">
+            <div class="card mb-3 shadow-sm">
               
                     <div class="card-header border-0" style="font-size: 13px; color: #546E7A;">
                         <i class="fa fa-user fa2"></i> Complete Your Profile
@@ -848,16 +848,16 @@
                               75% Complete
                           </div>
                           <div class="d-flex justify-content-end">
-                              <a href="/profile/{{request.user}}/" class="btn btn-sm border " style="font-size: 12px; background-color: #E57851; color: white;">Profile <i class="fa fa-arrow-right"></i></a>
+                              <a href="/profile/{{request.user}}/" class="btn btn-sm border shadow-sm" style="font-size: 12px; background-color: #E57851; color: white;">Profile <i class="fa fa-arrow-right"></i></a>
                           </div>
                     </div>
              
             </div>
-            <div class="card border  ">
-                <div class="card-header border-0 d-flex justify-content-between align-items-center" style="font-size: 13px; color: #546E7A;">
+            <div class="card border shadow-sm ">
+                <div class="card-header border-0" style="font-size: 13px; color: #546E7A;">
                     <div><i class="fa fa-bell fa2"></i> Opportunities Updates</div>
-                    <div title="Create Update" data-toggle="tooltip">
-                        <a class="btn btn-sm rounded-circle d-flex align-items-center justify-content-center" style="font-size:12px; border:1px solid #E57851; width:25px; height:25px;"><i class="fa fa-plus" style="color:#E57851;"></i></a>
+                    <div>
+   
                     </div>
 
                 </div>
@@ -955,7 +955,7 @@
 
             </div>
 
-            <div class="card border  mt-3 ">
+            <div class="card border shadow-sm mt-3 ">
                 <div class="card-header border-0" style="font-size: 13px; color: #546E7A;">
                     <i class="fa fa-newspaper-o" style="color: #E57851;"></i> Technical News
                 </div>
