--- a/Core/templates/Core/snippets/base.html
+++ b/Core/templates/Core/snippets/base.html
@@ -149,7 +149,7 @@ input[type="color"]:focus,
 </head>
 
 
-<body style="overflow-x: hidden; font-family: Helvetica;  background-color: #fff; ">
+<body style="overflow-x: hidden; font-family: Helvetica;  background-color: #F7F9FC; ">
     {% block header %}
 
     {% endblock %}
