--- a/Core/templates/Core/snippets/header.html
+++ b/Core/templates/Core/snippets/header.html
@@ -14,15 +14,11 @@
          </div>
      </form>
  --> 
- <a class="navbar-brand text-dark "style="font-weight:600; letter-spacing:1px;" href="/">
-    <div class="d-flex justify-content-start align-items-center">
-        <div>
-            <img src="{% static 'svg/Vector.svg' %}" style="height:20px;">
-        </div>
-        <div  class="mt-2">
-            <img src="{% static 'svg/ca.svg' %}" style="height:20px;">
-        </div>
-    </div>
+ <a class="navbar-brand text-dark mt-2 "style="font-weight:600; letter-spacing:1px;" href="/">
+    <h2 style="  color:#3C3C3C;  font-size: 1.2rem; font-weight:600;line-height: 45px; letter-spacing: 0.5px;">
+        <span style="font-size: 24px; font-weight: 800;">C</span>oding<span style="color:#E57851;"><span style="font-size: 24px;">A</span>lphas</span>
+
+    </h2>
 </a>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
@@ -166,8 +162,11 @@
                  
            </ul>
          <ul class="navbar-nav d-flex align-items-center">
+            <li class="nav-item"> 
+                <a class="nav-link" href="{% url 'discuss_homepage' %}" style="font-size: 13px; font-weight: 600;">Discuss</a>
+              </li>
             <li class="nav-item ">
-                <a class="nav-link mr-3" style="" href="{% url 'blog' %}">Blogs</a>
+                <a class="nav-link mr-3"  href="{% url 'blog' %}" style="font-size: 13px; font-weight: 600;">Blogs</a>
             </li>
            
             {% if request.user.is_authenticated %}
@@ -293,7 +292,7 @@
                     
                      <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href="{% url 'settings' %}"><i class="fa fa1 fa-cog mr-1"></i> Settings & Privacy</a>
                      <div class="dropdown-divider"></div>
-                     <a class="dropdown-item  pb-2 pt-2" style=" color: #E57851; font-size: 13px;" href=""><center><i class="fa fa-sign-out"></i> Log out</center></a>
+                     <a class="dropdown-item  pb-2 pt-2" style=" color: #E57851; font-size: 13px;" href="/logout/"><center><i class="fa fa-sign-out"></i> Log out</center></a>
                  </div>
              </li>
              {% else %}
